# goat

./: README.md  pyproject.toml
goat/asyncio/: practise_aiohttp.py  practise_asyncio.py  practise_coroutine.py
goat/basis/: common.py  hello.py  test.py
goat/builtin/: practise_argparse.py  practise_base64.py  practise_collections.py  practise_collections_2.py  practise_contextlib.py  practise_datetime.py  practise_hashlib.py  practise_hmac.py  practise_html_parser.py  practise_itertools.py  practise_struct.py  practise_urllib.py  practise_xml.py
goat/comm/: commpipe.py  commqueue.py  localthread.py  lockthread.py  multithread.py
goat/comm/dos/: task_master.py  task_worker.py
goat/database/: mysql.py  sqlalchemy_orm_1.py  sqlite.py  test.db
goat/enum/: month.py  weekday.py
goat/error/: error.py  practise.py
goat/gui/: practise_tk.py  practise_turtle.py
goat/io/: byteio.py  file.py  multiprocess.py  stringio.py  subproc.py
goat/network/: baidu.html  practise_tcp.py  practise_tcp_client.py  practise_tcp_server.py  practise_udp_client.py  practise_udp_server.py
goat/orm/: field.py  model.py  user.py
goat/other-model/: practise_chardet.py  practise_pillow.py  practise_psutil.py  practise_requests.py
goat/pojo/: chain.py  fib.py  people.py  student.py
goat/unittest/: mydict.py  mydict_test.py
goat/web/: __init__.py
