[tool.poetry]
name = "goat"
version = "0.1.0"
description = ""
authors = ["ethan-yuu <1812851741@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
requests = "^2.32.3"
chardet = "^5.2.0"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
