[tool.poetry]
name = "goat"
version = "0.1.0"
description = ""
authors = ["ethan-yuu <1812851741@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# 图片处理
pillow = "^11.1.0"
# 请求
requests = "^2.32.3"
# 编码格式
chardet = "^5.2.0"
# 系统性能监控
psutil = "^6.1.1"
# mysql 驱动
mysql-connector-python = "^9.1.0"
# orm框架（相当于mybatis-plus）
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
